Description
Executables with an invalid PE signature should not return STATUS_INVALID_IMAGE_FORMAT to give ntvdm a chance to handle the application.
In PeFmtCreateSection, the unaligned case already returns STATUS_INVALID_IMAGE_PROTECT instead if the PE signature is incorrect. The aligned case behaves differently.
This happens with e.g. FIFA '94. Spotted by V.
Attachments
Issue Links
- is duplicated by
- 
                    CORE-9597 IVTUTIL doesn't invoke ntvdm -         
- Resolved
 
-