[NTOS:MM] - Consistently return STATUS_INVALID_IMAGE_PROTECT from PeFmtCreateSection if the PE signature is missing. Patch by V. CORE-9618 #resolve

svn path=/trunk/; revision=67464